--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
         background-size: cover;
         background-position: 50% 50%;
       }
-      .wrapper {
+      #wrapper {
         height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
       }
+
       #content {
         display: flex;
         flex-direction: column;
@@ -66,6 +67,25 @@
         transition: 0.3s;
         text-align: center;
         border-radius: 4px;
+      }
+      h1 {
+        margin: 0;
+        font-size: 2em;
+      }
+      .avatar {
+        border-radius: 50%;
+        height: 12vh;
+        margin: 10px 0 15px 0;
+      }
+      .icon {
+        height: 3vh;
+      }
+      p {
+        font-size: 1em;
+        padding: .1em;
+        margin: 5px 0;
+        color: #444;
+        width: 150px;
       }
     </style>
   </head>
