--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         justify-content: center;
         align-items: center;
       }
-
       #content {
         display: flex;
         flex-direction: column;
@@ -87,6 +86,9 @@
         color: #444;
         width: 150px;
       }
+      #bottom {
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -96,7 +98,7 @@
         <img class="avatar" alt="discord avatar" src="https://cdn.discordapp.com/avatars/569414372959584256/b9400027735c8b05e5e9e9ca5bca505c.png?size=2048">
         <h1>Edazpotato</h1>
         <p>I make videos, websites, and other random things</p>
-        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="icon" alt="Twitter icon" src="/imges/twitter.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="icon" alt="Twitter icon" src="/imges/discord.png"></a>
+        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="icon" alt="Discord icon" src="/images/twitter.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="icon" alt="Twitter icon" src="/images/discord.png"></a>
       </div>
     </div>
     <div id="bottom">
@@ -104,7 +106,7 @@
         particlesJS.load("particlesJS", "/pjs-config.json");
       </script>
       <p>
-        Yes, i did copy <a href="https://i-love.pink">Ravy</a>'s design for this page
+        Yes, i did "borrow" <a href="https://i-love.pink">Ravy</a>'s design for this page
       </p>
     </div>
   </body>
