--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="particles.js"></script>
     <!-- css -->
     <Style>
-      body {
+      html, body {
         width: 100%;
         height: 100%;
         margin: 0;
