--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         align-items: center;
         padding: 20px 30px;
         z-index: 2;
-        background: #fff;
+        background: #121212;
         box-shadow: 0 0 15px 1px rgba(0,0,0,0.4);
         transition: 0.3s;
         text-align: center;
@@ -83,7 +83,7 @@
         font-size: 1em;
         padding: .1em;
         margin: 5px 0;
-        color: #444;
+        color: #FFFFFF;
         width: 150px;
       }
       #bottom {
@@ -98,7 +98,7 @@
         <img class="avatar" alt="discord avatar" src="https://cdn.discordapp.com/avatars/569414372959584256/b9400027735c8b05e5e9e9ca5bca505c.png?size=2048">
         <h1>Edazpotato</h1>
         <p>I make videos, websites, and other random things</p>
-        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="icon" alt="Discord icon" src="/images/twitter.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="icon" alt="Twitter icon" src="/images/discord.png"></a>
+        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="icon" alt="Discord icon" src="/images/discord.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="icon" alt="Twitter icon" src="/images/twitter.png"></a>
       </div>
     </div>
     <div id="bottom">
