--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        background-color: #cc0404;
+        background-color: #eb4d4b;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
