--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         border-radius: 4px;
       }
       h1 {
+        opacity: 87%;
+        color: #FFFFFF;
         margin: 0;
         font-size: 2em;
       }
@@ -80,6 +82,7 @@
         height: 3vh;
       }
       p {
+        opacity: 60%;
         font-size: 1em;
         padding: .1em;
         margin: 5px 0;
@@ -88,6 +91,9 @@
       }
       #bottom {
         display: none;
+      }
+      img {
+        filter: invert(1)
       }
     </style>
   </head>
