--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
       .icon {
         height: 3vh;
       }
+      .icon.black {
+        filter: invert(1)
+      }
       p {
         opacity: 60%;
         font-size: 1em;
@@ -92,9 +95,6 @@
       #bottom {
         display: none;
       }
-      img {
-        filter: invert(1)
-      }
     </style>
   </head>
   <body>
@@ -104,7 +104,7 @@
         <img class="avatar" alt="discord avatar" src="https://cdn.discordapp.com/avatars/569414372959584256/b9400027735c8b05e5e9e9ca5bca505c.png?size=2048">
         <h1>Edazpotato</h1>
         <p>I make videos, websites, and other random things</p>
-        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="icon" alt="Discord icon" src="/images/discord.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="icon" alt="Twitter icon" src="/images/twitter.png"></a>
+        <a href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="black icon" alt="Discord icon" src="/images/discord.png"></a><a href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="black icon" alt="Twitter icon" src="/images/twitter.png"></a>
       </div>
     </div>
     <div id="bottom">
