--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div class="row">
           <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
           <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="Youtube channel"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
         </div>
       </div>
     </div>
