--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         z-index: 100;
         opacity: 0%;
         transition: opacity 3s;
+        possition: absolute;
+        bottom: 5v;
       }
       .secret-text:hover {
         opacity: 100%;
