--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         opacity: 38%;
       }
       .secret-text {
-        z-index: 100;
+        z-index: 3;
         opacity: 0%;
         transition: opacity 3s;
-        possition: absolute;
+        position: absolute;
         bottom: 5v;
       }
       .secret-text:hover {
-        opacity: 100%;
+        opacity: 3%;
         transition: opacity 3s;
       }
     </style>
