--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         color: #FFFFFF;
         width: 150px;
       }
-      #bottom {
+      #scripts {
         display: none;
       }
       .row {
@@ -137,12 +137,14 @@
       </div>
     </div>
     <div id="bottom">
-      <script>
-        particlesJS.load("particlesJS", "/pjs-config.json");
-      </script>
       <p class="secret-text">
         Yes, i did "borrow" <a href="https://i-love.pink">Ravy</a>'s design for this page
       </p>
+    </div>
+    <div id="scripts">
+      <script>
+        particlesJS.load("particlesJS", "/pjs-config.json");
+      </script>
     </div>
   </body>
 </html>
