--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
         opacity: 38%;
       }
       .secret-text {
+        color: #FFFFFF;
         z-index: 3;
         opacity: 0%;
         transition: opacity 3s;
         position: absolute;
-        bottom: 5v;
+        bottom: 20vh;
       }
       .secret-text:hover {
-        opacity: 3%;
+        opacity: 87%;
         transition: opacity 3s;
       }
     </style>
