--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         opacity: 0%;
         transition: opacity 3s;
         position: absolute;
-        bottom: 20vh;
+        bottom: 10vh;
+        left: 50%;
       }
       .secret-text:hover {
         opacity: 87%;
