--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsabre.jpeg">
     
     <!-- particles.js -->
-    <script src="particles.js"></script>
+    <script src="/data-bin/particles.js"></script>
     <!-- css -->
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/data-bin/style.css"/>
   </head>
   <body>
     <div id="particlesJS"></div>
@@ -46,11 +46,41 @@
         <p class="secret-text">
           Yes, i did "borrow" <a href="https://i-love.pink">Ravy</a>'s design for this page
         </p>
+        <div class="theme-switch-wrapper">
+          <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"></div>
+          </label>
+        </div>
       </div>
     </div>
     <div id="scripts">
       <script>
-        particlesJS.load("particlesJS", "/pjs-config.json");
+        particlesJS.load("particlesJS", "/data-bin/pjs-config.json");
+      </script>
+      <script>
+        const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+        const currentTheme = localStorage.getItem('theme');
+
+        if (currentTheme) {
+          document.documentElement.setAttribute('data-theme', currentTheme);
+
+          if (currentTheme === 'dark') {
+            toggleSwitch.checked = true;
+          }
+        }
+
+        function switchTheme(e) {
+          if (e.target.checked) {
+            document.documentElement.setAttribute('data-theme', 'dark');
+            localStorage.setItem('theme', 'dark');
+          } else {
+            document.documentElement.setAttribute('data-theme', 'light');
+            localStorage.setItem('theme', 'light');
+          }
+        }
+
+        toggleSwitch.addEventListener('change', switchTheme, false);
       </script>
     </div>
   </body>
