--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </head>
   <body>
     <div id="particlesJS"></div>
-    <div id="wrapper">
-      <div id="content">
+    <div id="wrapper row">
+      <div id="content col">
         <img class="avatar" alt="discord avatar" src="https://github.com/edazpotato.png?size=2048">
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
@@ -50,7 +50,7 @@
           </label>
         </div>
       </div>
-      <p class="secret-text">
+      <p class="secret-text col">
             Yes, i did "borrow" <a href="https://i-love.pink">Ravy</a>'s design for this page
       </p>
     </div>
