--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </head>
   <body>
     <div id="particlesJS"></div>
-    <div id="wrapper row">
-      <div id="content col">
+    <div id="wrapper" class="row">
+      <div id="content" class="col">
         <img class="avatar" alt="discord avatar" src="https://github.com/edazpotato.png?size=2048">
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
