--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <!-- meta tags -->
     <title>Edazpotato!</title>
+    <!-- oEmbed -->
+    <link type="application/json+oembed" href="where-the-oembed-info-is.json" />
+    <!-- normal meta tags -->
     <meta name="title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta name="description" content="Edazpotato's official website. I host all my junk on here as well. Follow me on twitter @Edazpotato">
     <meta name="keywords" content="Edazpotato, edaz, potato, minecraft, datapacks, mods, web, developer">
