--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Edazpotato!</title>
     <!-- oEmbed -->
     <link type="application/json+oembed" href="/data-bin/oEmbed.json" />
+    <!-- Discord website embed -->
+    <meta name="theme-color" content="#d92800">
     <!-- normal meta tags -->
     <meta name="title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta name="description" content="Edazpotato's official website. I host all my junk on here as well. Follow me on twitter @Edazpotato">
