--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Note to anyone who wants to make their website look good in a discord website embed(not the type sent by bots/webhooks), check out this tutorial: https://www.reddit.com/r/discordapp/comments/82p8i6/a_basic_tutorial_on_how_to_get_the_most_out_of/ -->
     <!-- meta tags -->
     <title>Edazpotato!</title>
     <!-- oEmbed -->
