--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <meta property="og:url" content="https://edazpotato.github.io">
     <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="og:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="og:image" content="https://edazpotato.github.io/images/lightsabre.jpeg">
+    <meta property="og:image" content="https://edazpotato.github.io/images/lightsaber.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edazpotato.github.io">
     <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsabre.jpeg">
+    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsaber.png">
     
     <!-- particles.js -->
     <script src="/data-bin/particles.js"></script>
