--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <p class="secret-text">
-            Yes, i did "borrow" <a href="https://i-love.pink">Ravy</a>'s design for this page
+            Design "borrowed" from <a href="https://i-love.pink">Ravy</a>.
       </p>
     </div>
     <div id="scripts">
