--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
     <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsaber.png">
+    <!-- meta tags that acctuly effect the content of the page -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="charset" content"utf-8">
     
     <!-- particles.js -->
     <script src="/data-bin/particles.js"></script>
