--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="particlesJS"></div>
     <div id="wrapper">
       <div id="content">
-        <img class="avatar" alt="discord avatar" src="https://github.com/edazpotato.png?size=2048">
+        <a href="https://edazpotato.github.io/redir/github"><img class="avatar" alt="github avatar" src="https://github.com/edazpotato.png?size=2048"></a>
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row">
