--- a/redir/github/index.html
+++ b/redir/github/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="refresh" content="2;url="https://github.com/edazpotato" />
+  <meta http-equiv="refresh" content="2;url=https://github.com/edazpotato" />
     <title>Redirecting...</title>
   <meta name="author" content="EdazPotato">
   <meta name="description" content="Redirecting...">
