--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- particles.js -->
     <script src="/data-bin/particles.js"></script>
     <!-- css -->
-    <link rel="stylesheet" href="/data-bin/style.css"/>
+    <link rel="stylesheet" href="/data-bin/homepage.css"/>
   </head>
   <body>
     <div id="particlesJS"></div>
