--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row">
-          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="Youtube channel"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
+          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="Youtube channel" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
@@ -60,7 +60,7 @@
         </div>
       </div>
       <p class="secret-text">
-            Design "borrowed" from <a href="https://i-love.pink">Ravy</a>.
+            Design "borrowed" from <a href="https://i-love.pink" target="_blank">Ravy</a>.
       </p>
     </div>
     <div id="scripts">
