--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <h1 class="high">Edazpotato</h1>
         <p class="med">I make videos, websites, and other random things</p>
         <div class="row">
-          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="Discord invite" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="Twitter profile" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
-          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="Youtube channel" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
+          <a class="col" href="https://edazpotato.github.io/redir/discord" aria-label="my Discord server invite link" target="_blank"><img class="black icon high" alt="Discord icon" src="/images/discord.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/twitter" aria-label="my Twitter profile link" target="_blank"><img class="black icon high" alt="Twitter icon" src="/images/twitter.png"></a>
+          <a class="col" href="https://edazpotato.github.io/redir/youtube" aria-label="my Youtube channel link" target="_blank"><img class="black icon high" alt="Youtube icon" src="/images/youtube.png"></a>   
         </div>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
-            <input type="checkbox" id="checkbox" />
+            <input type="checkbox" id="checkbox" aria-label="Toggle dark and light mode switch"/>
             <div class="slider round"></div>
           </label>
         </div>
       </div>
       <p class="secret-text">
-            Design "borrowed" from <a href="https://i-love.pink" target="_blank">Ravy</a>.
+            Design "borrowed" from <a href="https://i-love.pink" target="_blank" aria-label="Original design/layout of this webpage link">Ravy</a>.
       </p>
     </div>
     <div id="scripts">
