--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <!-- apple -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no"
-    
+    <meta name="format-detection" content="telephone=no">
+    <link rel="apple-touch-startup-image" href="/data-bin/apple-startup-image.png">
+    <link rel="apple-touch-icon" href="/data-bin/apple-touch-icon.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edazpotato.github.io">
