--- a/macpoc-website/investors/index.html
+++ b/macpoc-website/investors/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-	<link href="/css/homepage.css" rel="stylesheet" type="text/css"/>
-	<link href="/css/grid.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" type="image/png" href="/macpoc-website//favicon.png"/>
+	<link href="/macpoc-website//css/homepage.css" rel="stylesheet" type="text/css"/>
+	<link href="/macpoc-website//css/grid.css" rel="stylesheet" type="text/css"/>
 	<meta charset="utf-8">
 	<title>Macpoc - Investors</title>
 </head>
@@ -11,8 +11,8 @@
 	<header>
 		<img src="/images/header-logo.png" alt="Macpoc logo" title="Macpoc logo" class="header-logo header-item"/>
 		<nav class="navigation header-item">
-			<a href="/" title="Go to homepage" class="navigation-link">Home</a>
-			<a href="/investors" title="Go to investors page" class="navigation-link">Investors</a>
+			<a href="/macpoc-website/" title="Go to homepage" class="navigation-link">Home</a>
+			<a href="/macpoc-website/investors" title="Go to investors page" class="navigation-link">Investors</a>
 		</nav>
 	</header>
 	<!-- main body container -->
