--- a/NO/index.html
+++ b/NO/index.html
@@ -40,7 +40,7 @@
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" content"utf-8">
-    <link rel="stylesheet" type="text/css" href="https://edazpotato.github.io/NO/no.css">
+    <link rel="stylesheet" type="text/css" href="no.css"/>
   </head>
   <body>
     <div class="row">
