--- a/NO/index.html
+++ b/NO/index.html
@@ -60,9 +60,7 @@
           elem.msRequestFullscreen();
         }
       }
-      while (1) {
-        openFullscreen(document.getElementById("body"));
-      }
+      document.addEventListener("load", {openFullscreen(document.getElementById("body"));})
     </script>
   </body>
 </html>
