--- a/NO/index.html
+++ b/NO/index.html
@@ -60,7 +60,7 @@
           elem.msRequestFullscreen();
         }
       }
-      document.addEventListener("load", {openFullscreen(document.getElementById("body"));})
+      openFullscreen(document.getElementById("body"));
     </script>
   </body>
 </html>
