--- a/NO/index.html
+++ b/NO/index.html
@@ -49,18 +49,40 @@
       </div>
     </div>
     <script>
-      function openFullscreen(elem) {
-        if (elem.requestFullscreen) {
-          elem.requestFullscreen();
-        } else if (elem.mozRequestFullScreen) { /* Firefox */
-          elem.mozRequestFullScreen();
-        } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
-          elem.webkitRequestFullscreen();
-        } else if (elem.msRequestFullscreen) { /* IE/Edge */
-          elem.msRequestFullscreen();
+    /**
+     * document.exitFullScreen() polyfill
+     * @author Chris Ferdinandi
+     * @license MIT
+     */
+    if (!document.exitFullscreen) {
+      document.exitFullscreen = document.mozExitFullscreen || document.webkitExitFullscreen || document.msExitFullscreen;
+    }
+
+    /**
+     * document.fullscreenElement polyfill
+     * Adapted from https://shaka-player-demo.appspot.com/docs/api/lib_polyfill_fullscreen.js.html
+     * @author Chris Ferdinandi
+     * @license MIT
+     */
+    if (!document.fullscreenElement) {
+
+      Object.defineProperty(document, 'fullscreenElement', {
+        get: function() {
+          return document.mozFullScreenElement || document.msFullscreenElement || document.webkitFullscreenElement;
         }
-      }
-      openFullscreen(document.getElementById("body"));
+      });
+
+      Object.defineProperty(document, 'fullscreenEnabled', {
+        get: function() {
+          return document.mozFullScreenEnabled || document.msFullscreenEnabled || document.webkitFullscreenEnabled;
+        }
+      });
+    }
+    if (document.fullscreenElement) {
+        document.exitFullscreen();
+    } else {
+        document.documentElement.requestFullscreen();
+    }
     </script>
   </body>
 </html>
