--- a/NO/index.html
+++ b/NO/index.html
@@ -48,41 +48,6 @@
         <h1>NO</h1>
       </div>
     </div>
-    <script>
-    /**
-     * document.exitFullScreen() polyfill
-     * @author Chris Ferdinandi
-     * @license MIT
-     */
-    if (!document.exitFullscreen) {
-      document.exitFullscreen = document.mozExitFullscreen || document.webkitExitFullscreen || document.msExitFullscreen;
-    }
-
-    /**
-     * document.fullscreenElement polyfill
-     * Adapted from https://shaka-player-demo.appspot.com/docs/api/lib_polyfill_fullscreen.js.html
-     * @author Chris Ferdinandi
-     * @license MIT
-     */
-    if (!document.fullscreenElement) {
-
-      Object.defineProperty(document, 'fullscreenElement', {
-        get: function() {
-          return document.mozFullScreenElement || document.msFullscreenElement || document.webkitFullscreenElement;
-        }
-      });
-
-      Object.defineProperty(document, 'fullscreenEnabled', {
-        get: function() {
-          return document.mozFullScreenEnabled || document.msFullscreenEnabled || document.webkitFullscreenEnabled;
-        }
-      });
-    }
-    if (document.fullscreenElement) {
-        document.exitFullscreen();
-    } else {
-        document.documentElement.requestFullscreen();
-    }
-    </script>
+    <script src="no.js"></script>
   </body>
 </html>
