--- a/NO/index.html
+++ b/NO/index.html
@@ -48,7 +48,7 @@
         <h1>NO</h1>
       </div>
     </div>
-    <audio src="no.mp3"></audio>
+    <audio src="no.mp3" autoplay></audio>
     <script src="no.js"></script>
   </body>
 </html>
