--- a/NO/index.html
+++ b/NO/index.html
@@ -4,8 +4,6 @@
   <!-- Note to anyone who wants to make their website look good in a discord website embed(not the type sent by bots/webhooks), check out this tutorial: https://www.reddit.com/r/discordapp/comments/82p8i6/a_basic_tutorial_on_how_to_get_the_most_out_of/ -->
     <!-- meta tags -->
     <title>NO</title>
-    <!-- oEmbed -->
-    <link type="application/json+oembed" href="oEmbed.json" />
     <!-- Discord website embed -->
     <meta name="theme-color" content="#000000">
     <!-- normal meta tags -->
@@ -19,24 +17,18 @@
     <meta name="creationdate" content="NO">
     <meta name="distribution" content="NO">
     <meta name="rating" content="NO">
-    <!-- apple -->
-    <meta name="apple-mobile-web-app-capable" content="NO">
-    <meta name="apple-mobile-web-app-status-bar-style" content="NO">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="apple-touch-startup-image" href="https://edazpotato.github.io/NO/no.png">
-    <link rel="apple-touch-icon" href="https://edazpotato.github.io/NO/no.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="NO">
     <meta property="og:url" content="https://edazpotato.github.io/NO">
     <meta property="og:title" content="NO">
     <meta property="og:description" content="Just NO">
-    <meta property="og:image" content="https://edazpotato.github.io/NO/no.png">
+    <meta property="og:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edazpotato.github.io/NO">
     <meta property="twitter:title" content="NO">
     <meta property="twitter:description" content="Just NO">
-    <meta property="twitter:image" content="https://edazpotato.github.io/NO/no.png">
+    <meta property="twitter:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" content"utf-8">
