--- a/NO/index.html
+++ b/NO/index.html
@@ -7,31 +7,31 @@
     <!-- Discord website embed -->
     <meta name="theme-color" content="#000000">
     <!-- normal meta tags -->
-    <meta name="title" content="NO">
-    <meta name="description" content="Just NO">
-    <meta name="keywords" content="NO">
-    <meta name="robots" content="index, follow">
-    <meta name="copyright" content="NO">
-    <meta name="language" content="NO">
-    <meta name="author" content="NO">
-    <meta name="creationdate" content="NO">
-    <meta name="distribution" content="NO">
-    <meta name="rating" content="NO">
+    <meta name="title" property="title" content="NO">
+    <meta name="description" property="description" content="Just NO">
+    <meta name="keywords" property="keywords" content="NO">
+    <meta name="robots" property="robots" content="index, follow">
+    <meta name="copyright" property="copyright" content="NO">
+    <meta name="language" property="language" content="NO">
+    <meta name="author" property="author" content="NO">
+    <meta name="creationdate" property="creationdate" content="NO">
+    <meta name="distribution" property="distribution" content="NO">
+    <meta name="rating" property="rating" content="NO">
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="NO">
-    <meta property="og:url" content="https://edazpotato.github.io/NO">
-    <meta property="og:title" content="NO">
-    <meta property="og:description" content="Just NO">
-    <meta property="og:image" content="https://edazpotato.github.io/NO/no.jpg">
+    <meta property="og:type" name="og:type" content="NO">
+    <meta property="og:url" name="og:url" content="https://edazpotato.github.io/NO">
+    <meta property="og:title" name="og:title" content="NO">
+    <meta property="og:description" name="og:description" content="Just NO">
+    <meta property="og:image" name="og:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://edazpotato.github.io/NO">
-    <meta property="twitter:title" content="NO">
-    <meta property="twitter:description" content="Just NO">
-    <meta property="twitter:image" content="https://edazpotato.github.io/NO/no.jpg">
+    <meta property="twitter:card" name="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" name="twitter:url" content="https://edazpotato.github.io/NO">
+    <meta property="twitter:title" name="twitter:title" content="NO">
+    <meta property="twitter:description" name="twitter:description" content="Just NO">
+    <meta property="twitter:image" name="twitter:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- meta tags that acctuly effect the content of the page -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="charset" content"utf-8">
+    <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="charset" property="charset" content"utf-8">
     <link rel="stylesheet" type="text/css" href="no.css"/>
   </head>
   <body id="body">
