--- a/NO/index.html
+++ b/NO/index.html
@@ -7,8 +7,8 @@
     <!-- Discord website embed -->
     <meta name="theme-color" content="#000000">
     <!-- normal meta tags -->
-    <meta name="title" property="title" content="NO">
-    <meta name="description" property="description" content="Just NO">
+    <meta name="title" property="title" content="NO NO NO NO NO NO NO NO NO NO ">
+    <meta name="description" property="description" content="Just NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO ">
     <meta name="keywords" property="keywords" content="NO">
     <meta name="robots" property="robots" content="index, follow">
     <meta name="copyright" property="copyright" content="NO">
@@ -20,14 +20,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" name="og:type" content="NO">
     <meta property="og:url" name="og:url" content="https://edazpotato.github.io/NO">
-    <meta property="og:title" name="og:title" content="NO">
-    <meta property="og:description" name="og:description" content="Just NO">
+    <meta property="og:title" name="og:title" content="NO NO NO NO NO NO NO NO NO NO ">
+    <meta property="og:description" name="og:description" content="Just NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO ">
     <meta property="og:image" name="og:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- Twitter -->
     <meta property="twitter:card" name="twitter:card" content="summary_large_image">
     <meta property="twitter:url" name="twitter:url" content="https://edazpotato.github.io/NO">
-    <meta property="twitter:title" name="twitter:title" content="NO">
-    <meta property="twitter:description" name="twitter:description" content="Just NO">
+    <meta property="twitter:title" name="twitter:title" content="NO NO NO NO NO NO NO NO NO NO ">
+    <meta property="twitter:description" name="twitter:description" content="Just NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO ">
     <meta property="twitter:image" name="twitter:image" content="https://edazpotato.github.io/NO/no.jpg">
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
