--- a/uzx/index.html
+++ b/uzx/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- meta tags that acctuly effect the content of the page -->
+    <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="charset" property="charset" content"utf-8">
+    <link rel="stylesheet" type="text/css" href="no.css"/>
+  </head>
+  <body id="body">
+    <div class="row">
+      <div class="col">
+        <h1>UZX</h1>
+        <h3>The Discord bot you waited for</h3>
+      </div>
+    </div>
+  </body>
+</html>
