--- a/uzx/index.html
+++ b/uzx/index.html
@@ -4,7 +4,7 @@
     <!-- meta tags that acctuly effect the content of the page -->
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" property="charset" content"utf-8">
-    <link rel="stylesheet" type="text/css" href="no.css"/>
+    <link rel="stylesheet" type="text/css" href="uzx-home.css"/>
   </head>
   <body id="body">
     <div class="row">
