--- a/uzx/index.html
+++ b/uzx/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" property="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="charset" property="charset" content"utf-8">
     <link rel="stylesheet" type="text/css" href="uzx-home.css"/>
+    <link rel="stylesheet" type="text/css" href="basic-grid.css"/>
   </head>
   <body id="body">
     <div class="row">
       <div class="col">
-        <h1>UZX</h1>
-        <h3>The Discord bot you waited for</h3>
+        <div class="row vert">
+          <div class="col">
+            <h1>UZX</h1>
+          </div>
+          <div class="col">
+            <h3>The Discord bot you waited for</h3>
+          </div>
+        </div>
       </div>
     </div>
   </body>
