--- a/uzx/index.html
+++ b/uzx/index.html
@@ -19,6 +19,16 @@
           </div>
         </div>
       </div>
+      <div class="col bottom">
+        <div class="row">
+          <div class="col">
+            <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server">Invite!</a>
+          </div>
+          <div class="col">
+            <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
