--- a/uzx/index.html
+++ b/uzx/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="basic-grid.css"/>
   </head>
   <body id="body">
-    <div class="row">
+    <div class="row vert spaced-vert">
       <div class="col">
         <div class="row vert">
           <div class="col">
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="col bottom">
-        <div class="row">
+        <div class="row spaced">
           <div class="col">
             <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server">Invite!</a>
           </div>
