--- a/uzx/index.html
+++ b/uzx/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="basic-grid.css"/>
   </head>
   <body id="body">
-    <div class="row vert spaced-vert">
+    <div class="row vert spaced">
       <div class="col">
         <div class="row vert">
           <div class="col">
