--- a/uzx/index.html
+++ b/uzx/index.html
@@ -22,7 +22,7 @@
       <div class="col bottom">
         <div class="row spaced">
           <div class="col">
-            <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server">Invite!</a>
+            <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server">Invite</a>
           </div>
           <div class="col">
             <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
