--- a/uzx/index.html
+++ b/uzx/index.html
@@ -24,6 +24,7 @@
           <div class="col">
             <a href="/uzx/invite" class="btn" title="Invite the UZX bot to your Discord server">Invite</a>
           </div>
+          <div class="col spacer"></div>
           <div class="col">
             <a href="/uzx/docs" class="btn" title="View the documentation for the UZX Discord bot">Documentation</a>
           </div>
