--- a/uzx/invite/index.html
+++ b/uzx/invite/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="1;url=http://edazpotato.github.io/uzx" />
+    <meta http-equiv="refresh" content="1;url=https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot" />
   </head>
   <body>
-    Redirecting to <a href=""></a>
+    Redirecting to <a href="https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot">https://discord.com/api/oauth2/authorize?client_id=712195162532479008&permissions=8&scope=bot</a>
   </body>
 </html>
