--- a/NO/index.html
+++ b/NO/index.html
@@ -6,6 +6,8 @@
     <title>NO</title>
     <!-- Discord website embed -->
     <meta name="theme-color" content="#000000">
+    <!-- pintres -->
+    <meta name="pinterest-rich-pin" content="true" />
     <!-- normal meta tags -->
     <meta name="title" property="title" content="NO NO NO NO NO NO NO NO NO NO ">
     <meta name="description" property="description" content="Just NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO NO ">
